# CrewAI

./: README.md  meal_recipe.md  meal_recipe_1.md  pyproject.toml
src/mealgenerator/: crew.py  main.py
src/mealgenerator/config/: agents.yaml  tasks.yaml
